force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Additional_Comments_from_WCA_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_from_WCA_Deputy__c</fullName>
    <description>For BOFE, pulled from Wage Claim referral</description>
    <label>Additional Comments from WCA Deputy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>