force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Address_2__c</fullName>
    <description>Second address field of the Advocate.</description>
    <inlineHelpText>Second address field of the Advocate.</inlineHelpText>
    <label>Advocate Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>