force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_Cell_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Cell_Other_Phone__c</fullName>
    <description>The Cell phone or other contact phone number of the Advocate</description>
    <inlineHelpText>The Cell phone or other contact phone number of the Advocate</inlineHelpText>
    <label>Advocate Cell/Other Phone</label>
    <type>Phone</type>
</CustomField>