force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_City__c.field-meta.xml
<CustomField>
    <fullName>Advocate_City__c</fullName>
    <description>City of the Advocate</description>
    <inlineHelpText>City of the Advocate</inlineHelpText>
    <label>Advocate City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>