force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Email_Address__c</fullName>
    <description>Advocate Email Address if available.</description>
    <inlineHelpText>Advocate Email Address</inlineHelpText>
    <label>Advocate Email Address</label>
    <type>Email</type>
</CustomField>