force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Home_Phone__c</fullName>
    <description>Home phone number of the Advocate</description>
    <inlineHelpText>Home phone number of the Advocate</inlineHelpText>
    <label>Advocate Home Phone</label>
    <type>Phone</type>
</CustomField>