force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_Name__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Name__c</fullName>
    <description>Te name of the Advocate reporting this labor code violation</description>
    <inlineHelpText>Te name of the Advocate reporting this labor code violation</inlineHelpText>
    <label>Advocate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>