force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Advocate_Organization_Name__c</fullName>
    <description>The organization name that the Advocate belongs to.</description>
    <inlineHelpText>The organization name that the Advocate belongs to.</inlineHelpText>
    <label>Advocate Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>