force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Advocate_State__c.field-meta.xml
<CustomField>
    <fullName>Advocate_State__c</fullName>
    <description>State the Advocate is located.</description>
    <inlineHelpText>State the Advocate is located.</inlineHelpText>
    <label>Advocate State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>