force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <description>Dictates the approval that is needed.</description>
    <inlineHelpText>Dictates the approval that is needed.</inlineHelpText>
    <label>Approval Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>BOFE Deputy</fullName>
            </value>
            <value>
                <fullName>BOFE Sr. Deputy</fullName>
            </value>
            <value>
                <fullName>Wage Deputy</fullName>
            </value>
            <value>
                <fullName>Wage Sr. Deputy</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>