force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Are_Employees_Paid_by_Piece_Rate__c.field-meta.xml
<CustomField>
    <fullName>Are_Employees_Paid_by_Piece_Rate__c</fullName>
    <label>Are Employees Paid by Piece Rate?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>