force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Average_Time_for_Employee_Meal_Period__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_for_Employee_Meal_Period__c</fullName>
    <description>What is the Average Length of Time for an Employee&#39;s Meal Period in minutes?</description>
    <inlineHelpText>What is the Average Length of Time for an Employee&#39;s Meal Period in minutes?</inlineHelpText>
    <label>Average Time for Employee Meal Period?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>