force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Business_Expense_Violations__c.field-meta.xml
<CustomField>
    <fullName>Business_Expense_Violations__c</fullName>
    <description>Suspected Violations of Employer - Business Expense Violations</description>
    <inlineHelpText>Full Text of choices- 
Uniforms not reimbursed or illegally charged to employees
Tools, Supplies, or equipment not reimbursed or illegally charged to employees
Illegal charges for cash shortages, breakage, or loss of equipment</inlineHelpText>
    <label>Business Expense Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No payback or illegal charge of uniform</fullName>
            </value>
            <value>
                <fullName>Tools, equipment, supply not reimbursed</fullName>
            </value>
            <value>
                <fullName>Illegal charges for cash shortage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>