force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <description>The Business Hours of this Location</description>
    <inlineHelpText>The Business Hours of this Location</inlineHelpText>
    <label>Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>