force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Case_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Case_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by trigger on parent Case Management record for BOFE cases when the case is accepted. Used for firing workflow to email wage deputies when cases are accepted.</description>
    <label>Case Accepted</label>
    <type>Checkbox</type>
</CustomField>