force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Child_Labor_Violations__c.field-meta.xml
<CustomField>
    <fullName>Child_Labor_Violations__c</fullName>
    <description>Suspected Violations of Employer - Child Labor Violations</description>
    <label>Child Labor Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No valid work permit(s)</fullName>
            </value>
            <value>
                <fullName>No valid entertainment work permit(s)</fullName>
            </value>
            <value>
                <fullName>Minor work excessive or prohibited hours</fullName>
            </value>
            <value>
                <fullName>Minor work in hazardous conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>