force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Claimant_Requesting_Stay_of_Wage_Claims__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Requesting_Stay_of_Wage_Claims__c</fullName>
    <description>For BOFE, populated via wage claim referral</description>
    <label>Claimant Requesting Stay of Wage Claims?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>