force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Hire__c</fullName>
    <description>If Yes, Date of Hire</description>
    <inlineHelpText>If Yes, Date of Hire</inlineHelpText>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>