force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Date_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Referral__c</fullName>
    <description>F0006: Date of Referral from Wage.</description>
    <inlineHelpText>F0006: Date of Referral from Wage.</inlineHelpText>
    <label>Date of Referral</label>
    <type>Date</type>
</CustomField>