force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Deputy_Making_Referral__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Making_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>F0008: Deputy Making Referral from wage claim.</description>
    <inlineHelpText>F0008: Deputy Making Referral from wage claim.</inlineHelpText>
    <label>Deputy Making Referral</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reports_of_Labor_Law_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>