force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Describe_Diff_Schedules_Irregular_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Describe_Diff_Schedules_Irregular_Hrs__c</fullName>
    <description>If Employees Work different schedules or irregular hours, briefly describe the different schedules or irregular hours as best you can:</description>
    <inlineHelpText>If Employees Work different schedules or irregular hours, briefly describe the different schedules or irregular hours as best you can:</inlineHelpText>
    <label>Describe Diff. Schedules Irregular Hrs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>