force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Designate_Standard_Workday_Begin_Time__c.field-meta.xml
<CustomField>
    <fullName>Designate_Standard_Workday_Begin_Time__c</fullName>
    <description>DID THE EMPLOYER DESIGNATE WHAT TIME THE WORKDAY BEGAN FOR EMPLOYEES?</description>
    <inlineHelpText>DID THE EMPLOYER DESIGNATE WHAT TIME THE WORKDAY BEGAN FOR EMPLOYEES?</inlineHelpText>
    <label>Designate Standard Workday Begin Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>