force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Designate_Start_of_Workweek__c.field-meta.xml
<CustomField>
    <fullName>Designate_Start_of_Workweek__c</fullName>
    <description>Did the Employer Designate which day of the week the workweek began?</description>
    <inlineHelpText>Did the Employer Designate which day of the week the workweek began?</inlineHelpText>
    <label>Designate Start of Workweek?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>