force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Designated_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Designated_Start_Time__c</fullName>
    <description>What time did the employer designate?</description>
    <inlineHelpText>What time did the employer designate?</inlineHelpText>
    <label>Designated Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>