force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/DIR_Case__c.field-meta.xml
<CustomField>
    <fullName>DIR_Case__c</fullName>
    <description>This establishes a Master-Detail relationship do the DIR Case.  A Case must be created logically before a report of labor code violation may be created.</description>
    <inlineHelpText>This establishes a Master-Detail relationship do the DIR Case.  A Case must be created logically before a report of labor code violation may be created.  Reparentable</inlineHelpText>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Reports of Labor Law Violations</relationshipLabel>
    <relationshipName>Reports_of_Labor_Code_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>