force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Do_Did_Work_For_the_Employer__c.field-meta.xml
<CustomField>
    <fullName>Do_Did_Work_For_the_Employer__c</fullName>
    <description>DO YOU OR DID YOU WORK FOR THE EMPLOYER</description>
    <inlineHelpText>DO YOU OR DID YOU WORK FOR THE EMPLOYER</inlineHelpText>
    <label>Do/Did Work For the Employer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>