force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employees_Misclassification__c.field-meta.xml
<CustomField>
    <fullName>Employees_Misclassification__c</fullName>
    <description>Suspected Violations of Employer - Misclassification</description>
    <label>Employees Misclassification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Misclassified as independent contractors</fullName>
            </value>
            <value>
                <fullName>Salaried misclassified as exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>