force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_2__c</fullName>
    <description>The Address of the Employer</description>
    <inlineHelpText>The Address of the Employer</inlineHelpText>
    <label>Employer Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>