force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_Approximate_Location__c.field-meta.xml
<CustomField>
    <fullName>Employer_Approximate_Location__c</fullName>
    <description>If unaware of direct street address, please put the nearest intersection.</description>
    <inlineHelpText>If unaware of direct street address, please put the nearest intersection.</inlineHelpText>
    <label>Employer Approximate Location</label>
    <type>TextArea</type>
</CustomField>