force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_Owner_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Owner_s_Name__c</fullName>
    <description>Name of the individual that owns the Employer.</description>
    <inlineHelpText>Name of the individual that owns the Employer.</inlineHelpText>
    <label>Employer Owner&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>