force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Employer_State__c</fullName>
    <label>Employer State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>NV</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>