force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_Still_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Employer_Still_in_Business__c</fullName>
    <description>For BOFE, populated via wage claim referral</description>
    <label>Employer Still in Business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Filed for Bankruptcy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>