force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_Still_Operating_There__c.field-meta.xml
<CustomField>
    <fullName>Employer_Still_Operating_There__c</fullName>
    <description>Is Employer Still Operating at this address?</description>
    <inlineHelpText>Is Employer Still Operating at this address?</inlineHelpText>
    <label>Employer Still Operating There?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>