force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Employer_Zip__c.field-meta.xml
<CustomField>
    <fullName>Employer_Zip__c</fullName>
    <label>Employer Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>