force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/EmployerDesignated_Standard_Meal_Period__c.field-meta.xml
<CustomField>
    <fullName>EmployerDesignated_Standard_Meal_Period__c</fullName>
    <description>Did the Employer designate a standard meal period?</description>
    <inlineHelpText>Did the Employer designate a standard meal period?</inlineHelpText>
    <label>EmployerDesignated Standard Meal Period?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>