force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>If Other, Please Explain.</description>
    <inlineHelpText>If Other, Please Explain.</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>Other (explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>