force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Failure_To_Post__c.field-meta.xml
<CustomField>
    <fullName>Failure_To_Post__c</fullName>
    <description>Suspected Violations of Employer - Failure to Post</description>
    <inlineHelpText>Full First Choice is Applicable Industrial Welfare Commission Order not posted.
Full Last Choice is Rate of compensation not posted (for farmworkers only)</inlineHelpText>
    <label>Failure To Post</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicable Industrial Welfare Com.Order</fullName>
            </value>
            <value>
                <fullName>Minimum Wage Order 2001 not posted</fullName>
            </value>
            <value>
                <fullName>Pay day notice not posted</fullName>
            </value>
            <value>
                <fullName>Workers comp insurance notice not posted</fullName>
            </value>
            <value>
                <fullName>Rate of compensation not posted (farms)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>