force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Fixed_Amount_paid_to_Employees__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount_paid_to_Employees__c</fullName>
    <description>If Employees are paid a fixed amount of wages (or salary) regardless of the hours worked, this field specifies the amount. A separate field specifies the interval of payment.</description>
    <inlineHelpText>If Employees are paid a fixed amount of wages (or salary) regardless of the hours worked, this field specifies the amount. A separate field specifies the interval of payment.</inlineHelpText>
    <label>Fixed Amount paid to Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>