force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Fixed_Payment_Interval_Varies__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Payment_Interval_Varies__c</fullName>
    <description>If Employees are paid a fixed amount of wages (or salary) regardless of the hours worked and the interval varies, this field explains the reason the interval varies. A separate field also specifies the payment amount.</description>
    <inlineHelpText>If Employees are paid a fixed amount of wages (or salary) regardless of the hours worked and the interval varies, this field explains the reason the interval varies. A separate field also specifies the payment amount.</inlineHelpText>
    <label>Fixed Payment Interval Varies?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>