force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/How_are_Employees_Paid__c.field-meta.xml
<CustomField>
    <fullName>How_are_Employees_Paid__c</fullName>
    <label>How are Employees Paid?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Both Check &amp; Cash</fullName>
            </value>
            <value>
                <fullName>Other Method</fullName>
            </value>
            <value>
                <fullName>Payment Method Varies per employee or position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>