force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/How_Much_Employees_are_Paid_per_Hour__c.field-meta.xml
<CustomField>
    <fullName>How_Much_Employees_are_Paid_per_Hour__c</fullName>
    <description>When Employees are Paid per Hour, this is the amount per hour. There is a separate field if the amount per hour varies.</description>
    <inlineHelpText>When Employees are Paid per Hour, this is the amount per hour. There is a separate field if the amount per hour varies.</inlineHelpText>
    <label>How Much Employees are Paid per Hour?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>