force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/If_paid_in_cash_records_or_logs__c.field-meta.xml
<CustomField>
    <fullName>If_paid_in_cash_records_or_logs__c</fullName>
    <description>If Employees are paid in cash, does the employer keep cash payment records or logs?</description>
    <inlineHelpText>If Employees are paid in cash, does the employer keep cash payment records or logs?</inlineHelpText>
    <label>If paid in cash, records or logs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>